# cpp-snippets

./: README.md
hanoi/: CMakeLists.txt  README.md  README.txt  disk.h  hanoi.cpp  stack.cpp  stack.h
ring-buffer-ipc/: CMakeLists.txt  README.md  consumer.cpp  producer.cpp  ring_buffer.h
ring-buffer-threads/: CMakeLists.txt  main.cpp  ring_buffer.h
shm/: CMakeLists.txt  Makefile  README.md  README.txt  client.cpp  server.cpp  shm.h
